fix scroll behaviour when setGridSize true #665 now with `setGridSize: true` when drag/resize the items will render outside the grid you can try yourself to set .gridSize { overflow: hidden;} if you don't have scroll and want to clip that

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -66,7 +66,7 @@ app-parent-dynamic, app-widget-a, app-widget-b, app-widget-c {
 }
 
 code {
-  background: darkgrey;
+  background: lightgrey;
 }
 
 app-widget-a {
